[gd_scene load_steps=4 format=3 uid="uid://dqbxajw5ptkkm"]

[ext_resource type="Script" path="res://scripts/select.gd" id="1_36k67"]
[ext_resource type="Texture2D" uid="uid://cgtyqngp8k0ya" path="res://assets/right door.png" id="3_gdo2c"]
[ext_resource type="Texture2D" uid="uid://dtqhp22tlnhiv" path="res://assets/left_door_cutscene.png" id="3_r63vu"]

[node name="Select" type="Node2D"]
script = ExtResource("1_36k67")

[node name="LeftDoorCutscene" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.96, 0.648)
texture = ExtResource("3_r63vu")

[node name="RightDoor" type="Sprite2D" parent="."]
position = Vector2(584, 324)
scale = Vector2(0.946667, 0.648)
texture = ExtResource("3_gdo2c")

[node name="Button" type="Button" parent="."]
offset_left = 496.0
offset_top = 416.0
offset_right = 824.0
offset_bottom = 552.0
text = "nrect scene"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
